fix: change block search and width on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ template {
     padding-bottom: 30px;
   }
   .navbar__search {
-    margin-left: auto;
+    margin-left: 47px;
   }
   .navbar-menu {
     padding-top: 22px;
@@ -515,7 +515,7 @@ template {
 @media (max-width: 767px) {
   .container {
     max-width: 576px;
-    width: 92%;
+    width: 88%;
   }
   .navbar__search, .navbar-menu, .navbar__user {
     display: none;
