--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,7 +11,7 @@
       padding-top: 30px
       padding-bottom: 30px
     &__search
-      margin-left: auto
+      margin-left: 47px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
@@ -25,10 +25,11 @@
 @media ( max-width: 767px )
   .container
     max-width: 576px
-    width: 92%
+    width: 88%
   .navbar
     &__search, &-menu, &__user
       display: none
+
   .menu
     &-button
       display: flex
